Refactor Docker services for #817